Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-35571

QBluetoothDeviceDiscoveryAgent constructor ignores passed QBluetoothAddress on QNX

    XMLWordPrintable

Details

    Description

      The following constructor ignores the deviceAdapter parameter:

      QBluetoothDeviceDiscoveryAgent(const QBluetoothAddress &deviceAdapter, QObject *parent = 0);

      Although QNX only supports one local adapter a class instance should reject a scan with an IOError if the user passes an addres that is not matching the local adapter address.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            bomb3rman Fabian Bumberger
            ablasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes