Check the local adapter's BluetoothAdress before doing the discovery

Task-number: QTBUG-35571
Change-Id: I8f2eea7a8437787d61a238c760e948f45738618a
Reviewed-by: Aaron McCarthy <mccarthy.aaron@gmail.com>
Reviewed-by: Alex Blasche <alexander.blasche@digia.com>
Reviewed-by: Fabian Bumberger <fbumberger@rim.com>